--- a/libreria.html
+++ b/libreria.html
@@ -14,19 +14,8 @@
   <body>
     <main>
       <h1 class="text-center mt-3">Libreria</h1>
-      <div class="cnotainer">
-        <div class="row justify-content-center mt-3">
-          <div class="col-12 col-md-6 col-lg-3" id="col">
-            <div class="card w-50">
-              <img id="img" src="" class="card-img-top" alt="copertina" />
-              <div class="card-body">
-                <h5 class="card-title" id="cardTitle"></h5>
-                <p class="card-text" id="cardPrice"></p>
-                <a href="#" class="btn btn-primary" id="scarta">Scarta</a>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="container">
+        <div class="row justify-content-center mt-3"></div>
       </div>
     </main>
     <script
